Settlement discrepancy with usages numbers and mongoDB.
